fix: cleaning up theme var css, adjusting contrast of draft indicator on dark mode

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,46 +14,12 @@
   --color-button-border-active: #ff6188ff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --color-background: #272822;
-    --color-background-alt: #373831;
-    --color-text: #f8f8f2;
-    --color-selection: #ff6188;
-    --color-link: #75715e;
-    --color-header-active: #ab9df2;
-    --color-link-visited: #ab9df2;
-    --color-link-active: #78dce8;
-    --color-link-focus: #ffd866;
-    --color-button-clickable: #a9dc76;
-    --color-button-active: #ffd866;
-    --color-button-border-clickable: #a9dc7600;
-    --color-button-border-active: #ffd866ff;
-  }
-}
-
-.theme-light {
-  --color-background: #f8f8f2;
-  --color-background-alt: #fff;
-  --color-text: #272822;
-  --color-selection: #ff6188;
-  --color-link: #75715e;
-  --color-header-active: #78dce8;
-  --color-link-visited: #ab9df2;
-  --color-link-active: #ab9df2;
-  --color-link-focus: #ff6188;
-  --color-button-clickable: #78dce8;
-  --color-button-active: #ff6188;
-  --color-button-border-clickable: #a9dc7600;
-  --color-button-border-active: #ff6188ff;
-}
-
 .theme-dark {
   --color-background: #272822;
   --color-background-alt: #373831;
   --color-text: #f8f8f2;
   --color-selection: #ff6188;
-  --color-link: #75715e;
+  --color-link: #a9dc76;
   --color-header-active: #ab9df2;
   --color-link-visited: #ab9df2;
   --color-link-active: #78dce8;
